--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<li class="faq-item">
 					<div class="faq-question">
 						<div class="faq-question-title">
-							Πόσο καιρό πρέπει να περιμένω για το βραβείο μου;
+							Πόσο καιρό πρέπει να περιμένω για το βραβείο μου?
 						</div>
 						<div class="faq-question-arrow">
 							<img src="./assets/arrow.svg" alt>
@@ -60,7 +60,7 @@
 				<li class="faq-item">
 					<div class="faq-question">
 						<div class="faq-question-title">
-							Υπάρχουν κρυμμένα έξοδα;
+							Υπάρχουν κρυμμένα έξοδα?
 						</div>
 						<div class="faq-question-arrow">
 							<img src="./assets/arrow.svg" alt>
@@ -76,7 +76,7 @@
 				<li class="faq-item">
 					<div class="faq-question">
 						<div class="faq-question-title">
-							Είμαι ο νικητής, γιατί πρέπει να απαντήσω στις ερωτήσεις στο κουτί;
+							Είμαι ο νικητής, γιατί πρέπει να απαντήσω στις ερωτήσεις στο κουτί?
 						</div>
 						<div class="faq-question-arrow">
 							<img src="./assets/arrow.svg" alt>
@@ -92,7 +92,7 @@
 				<li class="faq-item">
 					<div class="faq-question">
 						<div class="faq-question-title">
-							Πώς μπορώ να βρω το βραβείο μου όταν κερδίζω;
+							Πώς μπορώ να βρω το βραβείο μου όταν κερδίζω?
 						</div>
 						<div class="faq-question-arrow">
 							<img src="./assets/arrow.svg" alt>
@@ -111,7 +111,7 @@
 				<li class="faq-item">
 					<div class="faq-question">
 						<div class="faq-question-title">
-							Γιατί πρέπει να πληρώσω € 2 για την τιμή;
+							Γιατί πρέπει να πληρώσω € 2 για την τιμή?
 						</div>
 						<div class="faq-question-arrow">
 							<img src="./assets/arrow.svg" alt>
@@ -128,7 +128,7 @@
 				<li class="faq-item">
 					<div class="faq-question">
 						<div class="faq-question-title">
-							Δεν μπορώ να χρησιμοποιήσω την πιστωτική μου κάρτα, η συναλλαγή απέτυχε;
+							Δεν μπορώ να χρησιμοποιήσω την πιστωτική μου κάρτα, η συναλλαγή απέτυχε?
 						</div>
 						<div class="faq-question-arrow">
 							<img src="./assets/arrow.svg" alt>
@@ -268,7 +268,7 @@ letter-spacing: 0em;
 						<p class="question">
 							Ερωτήσεις 1 από 3:
 							<strong>
-								Έχετε δοκιμάσει ακόμα προϊόντα Estée Lauder;
+								Έχετε δοκιμάσει ακόμα προϊόντα Estée Lauder?
 							</strong>
 						</p>
 						<a class="survey_button bq1" data-bq="1" href="" onclick="q1='<0.5'">
@@ -283,7 +283,7 @@ letter-spacing: 0em;
 						<p class="question">
 							Ερωτήσεις 2 από 3:
 							<strong>
-								Πώς μάθατε για την πώληση;
+								Πώς μάθατε για την πώληση?
 							</strong>
 						</p>
 						<a class="survey_button bq2" data-bq="1" href="">
@@ -299,7 +299,7 @@ letter-spacing: 0em;
 						<p class="question">
 							Ερωτήσεις 3 από 3.
 							<strong>
-								Για ποιο σκοπό χρειάζεται το προϊόν;
+								Για ποιο σκοπό χρειάζεται το προϊόν?
 							</strong>
 						</p>
 						<a class="survey_button bq3" data-bq="1" data-answer="1" href="" onclick="q3='1';">
