--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-	<title>Limited promotion</title>
+	<title>Promoción limitada</title>
 
 
 	<link rel="icon" type="image/gif" href="./assets/logo.jpg">
@@ -45,7 +45,7 @@
 				<li class="faq-item">
 					<div class="faq-question">
 						<div class="faq-question-title">
-							Πόσο καιρό πρέπει να περιμένω για το βραβείο μου?
+							¿Cuánto tiempo tengo que esperar mi premio?
 						</div>
 						<div class="faq-question-arrow">
 							<img src="./assets/arrow.svg" alt>
@@ -53,14 +53,14 @@
 					</div>
 					<div class="faq-answer">
 						<p>
-							Συνήθως χρειάζονται 3 έως 5 εργάσιμες ημέρες.
+							Por lo general, necesitan de 3 a 5 días hábiles.
 						</p>
 					</div>
 				</li>
 				<li class="faq-item">
 					<div class="faq-question">
 						<div class="faq-question-title">
-							Υπάρχουν κρυμμένα έξοδα?
+							¿Hay gastos ocultos?
 						</div>
 						<div class="faq-question-arrow">
 							<img src="./assets/arrow.svg" alt>
@@ -68,15 +68,15 @@
 					</div>
 					<div class="faq-answer">
 						<p>
-							Με τίποτα.Μόλις κερδίσετε το βραβείο και εισάγετε τα δεδομένα σας, θα φροντίσουμε
-							το υπόλοιπο.Τα έξοδα αποστολής είναι για το λογαριασμό μας!
+							De ninguna manera.Una vez que gane el premio e ingrese sus datos, nos encargaremos de
+							el resto.¡Los costos de envío son para nuestra cuenta!
 						</p>
 					</div>
 				</li>
 				<li class="faq-item">
 					<div class="faq-question">
 						<div class="faq-question-title">
-							Είμαι ο νικητής, γιατί πρέπει να απαντήσω στις ερωτήσεις στο κουτί?
+							Soy el ganador, ¿por qué debería responder las preguntas en el cuadro?
 						</div>
 						<div class="faq-question-arrow">
 							<img src="./assets/arrow.svg" alt>
@@ -84,15 +84,15 @@
 					</div>
 					<div class="faq-answer">
 						<p>
-							Δεν είσαι ακόμα ο νικητής, αλλά ήσασταν ένας από τους 100 ανθρώπους που έχουν το βραβείο μας
-							προσπάθησε να κερδίσει.
+							Todavía no eres el ganador, pero fuiste una de las 100 personas que tienen nuestro premio
+							Intenté ganar.
 						</p>
 					</div>
 				</li>
 				<li class="faq-item">
 					<div class="faq-question">
 						<div class="faq-question-title">
-							Πώς μπορώ να βρω το βραβείο μου όταν κερδίζω?
+							¿Cómo puedo encontrar mi premio cuando gano?
 						</div>
 						<div class="faq-question-arrow">
 							<img src="./assets/arrow.svg" alt>
@@ -100,18 +100,18 @@
 					</div>
 					<div class="faq-answer">
 						<p>
-							Πρώτον, πρέπει να εισαγάγετε τη διεύθυνση παράδοσης και τα στοιχεία επικοινωνίας, μετά από
-							τα οποία το σύστημά μας σας
-							παραπομπές.Δεύτερον, πρέπει να αποδείξετε ότι είστε πραγματικός άνθρωπος, επειδή η τιμή
-							είναι για
-							ένας άνθρωπος.
+							Primero, debe ingresar la dirección de entrega y los datos de contacto, después de
+							Que nuestro sistema
+							Referencias. Y debe demostrar que usted es una persona real, porque el precio
+							es para
+							un humano.
 						</p>
 					</div>
 				</li>
 				<li class="faq-item">
 					<div class="faq-question">
 						<div class="faq-question-title">
-							Γιατί πρέπει να πληρώσω € 2 για την τιμή?
+							¿Por qué tengo que pagar 2 € por el precio?
 						</div>
 						<div class="faq-question-arrow">
 							<img src="./assets/arrow.svg" alt>
@@ -119,16 +119,16 @@
 					</div>
 					<div class="faq-answer">
 						<p>
-							€ 2 δεν είναι επιστροφή χρημάτων - είναι να διατηρήσετε την πληρωμή για να αποδείξετε ότι
-							έχετε πραγματικά ένα
-							είναι ανθρώπινα.Όλες οι πληρωμές επιστρέφονται μετά την έγκριση.
+							€ 2 no es un reembolso, es mantener el pago para demostrar que
+							realmente tienes uno
+							Son humanos.
 						</p>
 					</div>
 				</li>
 				<li class="faq-item">
 					<div class="faq-question">
 						<div class="faq-question-title">
-							Δεν μπορώ να χρησιμοποιήσω την πιστωτική μου κάρτα, η συναλλαγή απέτυχε?
+							No puedo usar mi tarjeta de crédito, la transacción falló;
 						</div>
 						<div class="faq-question-arrow">
 							<img src="./assets/arrow.svg" alt>
@@ -136,9 +136,9 @@
 					</div>
 					<div class="faq-answer">
 						<p>
-							Εάν δεν μπορείτε να χρησιμοποιήσετε την πιστωτική σας κάρτα, αυτό σημαίνει ότι η τράπεζά σας
-							εμποδίζει το λογαριασμό: εσείς
-							Πρέπει να εγκρίνει το λογαριασμό στον τραπεζικό σας λογαριασμό.
+							Si no puede usar su tarjeta de crédito, significa que su banco
+							Bloqueando la cuenta:
+							Debe aprobar la cuenta en su cuenta bancaria.
 						</p>
 					</div>
 				</li>
@@ -159,13 +159,13 @@
 				<div>
 					<img src="./assets/burger.svg" alt="">
 					<span class="qwe">
-						Κατηγορίες
+						Categorías
 					</span>
 				</div>
 				<div class="qwe">
 					<img src="./assets/Promo.svg" alt="">
 					<span>
-						Προσφορές
+						Oferta
 					</span>
 				</div>
 				<div class="zxc">
@@ -190,7 +190,7 @@
 				<div class="qwe">
 					<img src="./assets/favorit.svg" alt="">
 					<span>
-						Τα προϊόντα μου
+						Mis productos
 					</span>
 				</div>
 				<div class="header_2_1">
@@ -207,7 +207,7 @@
 					">
 					<div class="conter">
 						<h1 class="main-content__title" style="text-align: left">
-							Estee Lauder σε προσιτή τιμή!
+							Estee Lauder a precio asequible!
 						</h1>
 						<p class="main-content__title_p sss" style="text-align: left;
 font-size: 12px;
@@ -217,14 +217,14 @@ letter-spacing: 0em;
 
 ">
 
-							Λόγω της διακοπής της συνεργασίας και του κλεισίματος καταστημάτων και αποθηκών στη Ρωσία, η
-							φημισμένη μάρκα καλλυντικών Estée Lauder πραγματοποιεί πώληση 1000 κουτιών δώρου μόνο με 2
+							Debido a la interrupción de la cooperación y el cierre de tiendas y almacenes en Rusia, el
+							La famosa marca de cosméticos de Estée Lauder está vendiendo 1000 cajas de regalo solo 2
 							€.
 						</p>
 						<p class="main-content__title_p2" style="text-align: left; font-size: 15px">
-							Η προσφορά θα διαρκέσει μέχρι τον
+							La oferta durará hasta el
 							<span class="js-info_dia-next2">10</span>&nbsp;<span
-								class="js-info_mes-nombre-next2">Σεπτέμβριο</span>.
+								class="js-info_mes-nombre-next2">Septiembre</span>.
 						</p>
 						<section class="center-slik">
 							<div class="slider-container">
@@ -241,10 +241,10 @@ letter-spacing: 0em;
 
 
 						<p style="margin-bottom: 15px; text-align: left; font-size: 15px;">
-							Ο χρόνος παράδοσης κυμαίνεται από 4 έως 7 ημέρες ανάλογα με τη διεύθυνσή σας.
+							El tiempo de entrega varía de 4 a 7 días dependiendo de su dirección.
 						</p>
 						<p style="text-align: left; font-size: 15px;">
-							Μην καθυστερείς!
+							¡No te retrases!
 						</p>
 					</div>
 					<section class="center-slikw">
@@ -266,47 +266,47 @@ letter-spacing: 0em;
 				<div class="main-content flag" id="contentt1">
 					<div id="q1">
 						<p class="question">
-							Ερωτήσεις 1 από 3:
+							Preguntas 1 de 3:
 							<strong>
-								Έχετε δοκιμάσει ακόμα προϊόντα Estée Lauder?
+								¿Todavía has probado los productos Estée Lauder?
 							</strong>
 						</p>
 						<a class="survey_button bq1" data-bq="1" href="" onclick="q1='<0.5'">
-							Ναί
+							Sí
 						</a>
 						<a class="survey_button bq1" data-bq="2" href="" onclick="q1='1'">
-							Οχι
+							No
 						</a>
 					</div>
 
 					<div id="q2">
 						<p class="question">
-							Ερωτήσεις 2 από 3:
+							Preguntas 2 de 3:
 							<strong>
-								Πώς μάθατε για την πώληση?
+								¿Cómo se enteró de la venta?
 							</strong>
 						</p>
 						<a class="survey_button bq2" data-bq="1" href="">
-							Είπαν οι φίλοι
+							Dichos amigos
 						</a>
 						<a class="survey_button bq2" data-bq="2" href="">
-							Διαφήμιση στο Facebook
+							Publicidad en Facebook
 						</a>
 
 					</div>
 
 					<div id="q3">
 						<p class="question">
-							Ερωτήσεις 3 από 3.
+							Preguntas 3 de 3.
 							<strong>
-								Για ποιο σκοπό χρειάζεται το προϊόν?
+								¿Qué propósito necesita el producto?
 							</strong>
 						</p>
 						<a class="survey_button bq3" data-bq="1" data-answer="1" href="" onclick="q3='1';">
-							Για προσωπική χρήση
+							Para uso personal
 						</a>
 						<a class="survey_button bq3" data-bq="1" data-answer="1" href="" onclick="q3='1';">
-							Ως δώρο
+							Como un regalo
 						</a>
 					</div>
 				</div>
@@ -314,23 +314,23 @@ letter-spacing: 0em;
 
 			<section class="main-content" id="content2">
 				<h2 style="text-align: center">
-					Οι απαντήσεις σας ελέγχονται
+					Tus respuestas se revisan
 				</h2>
 				<div class="d-flex justify-content-center">
 					<div class="spinner-border" role="status">
 						<span class="sr-only">
-							Φόρτωση...
+							Cargando...
 						</span>
 					</div>
 				</div>
 				<p class="result" id="result1">
-					Απάντησες στα 3/3 των ερωτήσεων!
+					¡Respondiste 3/3 de las preguntas!
 				</p>
 				<p class="result" id="result2">
-					Δεν υπάρχει προκαταρκτική έρευνα για την IP σας.
+					No hay investigación preliminar en su IP.
 				</p>
 				<p class="result" id="result3">
-					Τα δώρα φορτώνονται...
+					Los regalos están cargados ...
 				</p>
 			</section>
 
@@ -424,13 +424,13 @@ letter-spacing: 0em;
 							<div class="modal-body">
 								<img class="temblor_inf" src="./assets/box-1.png">
 								<h2>
-									Συγχαρητήρια, οι απαντήσεις σας επιβεβαιώθηκαν σωστά!
+									¡Felicitaciones, sus respuestas fueron confirmadas correctamente!
 								</h2>
 								<p>
-									Σήμερα, <span class="p_var-dia">5</span> <span
-										class="p_var-mes_nombre">Αυγούστου</span>, είναι η ευκαιρία σας να κερδίσετε ένα
-									κουτί δώρου Estée Lauder! Το μόνο που έχετε να κάνετε είναι να επιλέξετε τη σωστή
-									συσκευασία δώρου. Έχετε τρεις προσπάθειες, καλή επιτυχία!
+									Hoy, <span class="p_var-dia">5</span> <span class="p_var-mes_nombre">Agosto</span>,
+									es tu oportunidad de ganar un
+									Estée Lauder Regalo Box!Todo lo que tienes que hacer es elegir el correcto
+									Embalaje de regalos.Tienes tres intentos, ¡buena suerte!
 									<br><br>
 								</p>
 								<div id="p_modal_button1" class="p_modal_button">OK</div>
@@ -448,9 +448,9 @@ letter-spacing: 0em;
 								</div>
 								<h2>OHHH...</h2>
 								<p>
-									Συγγνώμη, αλλά αυτό το δώρο είναι άδειο! Έχετε ακόμα
+									Lo siento, ¡pero este regalo está vacío!Aún tienes
 									(<span id="num_intentos">3</span>)
-									προσπάθειες. Καλή τύχη!
+									intentos.¡Buena suerte!
 								</p>
 								<div id="p_modal_button2" class="p_modal_button">OK</div>
 							</div>
@@ -464,20 +464,20 @@ letter-spacing: 0em;
 							<div class="modal-body">
 								<img class="gift-img-modal" src>
 								<h2>
-									Συγχαρητήρια, είσαι ο τυχερός!
+									Felicitaciones, ¡eres el afortunado!
 								</h2>
 								<p id="r1">
-									1. Πρέπει να συμπληρώσετε τη φόρμα και να επιβεβαιώσετε την αίτησή σας.
+									1. Debe completar el formulario y confirmar su solicitud.
 								</p>
 								<p id="r1">
-									2. Το ειδικό βραβείο σας αξίας 2 € θα είναι διαθέσιμο αφού κάνετε κλικ στο OK.
+									2. Su premio especial de € 2 estará disponible después de hacer clic en Aceptar.
 								</p>
 								<p>
-									3. Το κουτί δώρου Estée Lauder θα αποσταλεί στον νικητή εντός 4-7 ημερών απευθείας
-									στη διεύθυνση που έχει δηλώσει.
+									3. Estée Lauder Gift Box se enviará al ganador dentro de los 4-7 días directo
+									a la dirección que ha declarado.
 								</p>
 								<a href="http://google.com" onclick="fbq('track', 'InitiateCheckout');"
-									id="p_modal_button3" class="p_modal_button">OK</a>
+									id="p_modal_button3" class="p_modal_button">DE ACUERDO</a>
 							</div>
 						</div>
 					</div>
@@ -505,32 +505,32 @@ letter-spacing: 0em;
 		var template = "surbox";
 		var brand_country = "Greece";
 		var dayNames = Array(
-			'Κυριακή',
-			'Δευτέρα',
-			'Μάσταρα',
-			'Τετάρτη',
-			'ΠΕΜΠΤΗ',
-			'Παρασκευή',
-			'ΣΑΒΒΑΤΟ'
+			'Domingo',
+			'Lunes',
+			'Masta',
+			'Miércoles',
+			'Jueves',
+			'Viernes',
+			'SÁBADO'
 		);
 		var monthNames = [
-			'Ιανουάριος',
-			'ΦΕΒΡΟΥΑΡΙΟΣ',
-			'Άρης',
-			'Άκαμπτος',
-			'Ενδέχεται',
-			'Ιούνιος',
-			'Ιούλιος',
-			'Αύγουστος',
-			'Σεπτέμβριος',
-			'Οκτώβριος',
-			'Νοέμβριος',
-			'Δεκέμβριος',
+			'Enero',
+			'FEBRERO',
+			'Marte',
+			'Rígido',
+			'Puede',
+			'Junio',
+			'Julio',
+			'Agosto',
+			'Septiembre',
+			'Octubre',
+			'Noviembre',
+			'Diciembre',
 		];
 
 		var img_regalo = "./principal-it.png";
-		var minutos_y = "Λεπτό ";
-		var segundos = "Δευτερόλεπτα";
+		var minutos_y = "Minuto, delgado ";
+		var segundos = "Segundos";
 		var modalOptions = {
 			backdrop: "static",
 			keyboard: false,
